[gd_scene load_steps=3 format=2]

[ext_resource path="res://prefabs/world_inert/world_volume_corner.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/static_entities/props/subway_carriage_entity.gd" type="Script" id=2]

[node name="subway_carriage" type="Spatial"]
script = ExtResource( 2 )

[node name="OmniLight18" type="OmniLight" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 4, -7 )
shadow_enabled = true
omni_range = 8.0
omni_attenuation = 0.196146

[node name="OmniLight19" type="OmniLight" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 4, 7 )
shadow_enabled = true
omni_range = 8.0
omni_attenuation = 0.196146

[node name="OmniLight20" type="OmniLight" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 4, 0 )
shadow_enabled = true
omni_range = 8.0
omni_attenuation = 0.196146

[node name="world_volume_corner33" parent="." instance=ExtResource( 1 )]
transform = Transform( 5, 0, 0, 0, 2, 0, 0, 0, 24, -2.5, 0, -12 )

[node name="world_volume_corner34" parent="." instance=ExtResource( 1 )]
transform = Transform( 5, -3.01992e-08, -2.09815e-06, -7.54979e-07, -0.2, 3.6239e-06, -4.37114e-07, -3.01992e-08, -24, -2.5, 5, 12 )

[node name="world_volume_corner35" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.5, 0, 0, 0, 2.8, 0, 0, 0, 1, -2.5, 2, -12 )

[node name="world_volume_corner47" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.5, 0, 0, 0, 2.8, 0, 0, 0, 1, 1, 2, -12 )

[node name="world_volume_corner36" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.5, 0, 0, 0, 2.8, 0, 0, 0, 1, -2.5, 2, 11 )

[node name="world_volume_corner37" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.5, 0, 0, 0, 2.8, 0, 0, 0, 1, 1, 2, 11 )

[node name="world_volume_corner39" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 4, -2.5, 2, -11 )

[node name="world_volume_corner40" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 8, -2.5, 2, -4 )

[node name="world_volume_corner41" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 4, -2.5, 2, 7 )

[node name="north_door_1" parent="." instance=ExtResource( 1 )]
transform = Transform( -8.74228e-09, 0, 1, 0, 2.8, 0, -0.2, 0, -4.37114e-08, -1, 2, -11.5 )

[node name="north_door_2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.50996e-08, 0, -1, 0, 2.8, 0, 0.2, 0, 7.54979e-08, 1, 2, -11.7 )

[node name="south_door_1" parent="." instance=ExtResource( 1 )]
transform = Transform( -8.74228e-09, 0, 1, 0, 2.8, 0, -0.2, 0, -4.37114e-08, -1, 2, 11.75 )

[node name="south_door_2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.50996e-08, 0, -1, 0, 2.8, 0, 0.2, 0, 7.54979e-08, 1, 2, 11.55 )

[node name="north_west_door_1" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 1.5, -2.7, 2, -7 )

[node name="north_west_door_2" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.2, 0, -1.31134e-07, 0, 2.8, 0, 1.74846e-08, 0, -1.5, -2.5, 2, -4 )

[node name="north_east_door_1" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 1.5, 2.5, 2, -7 )

[node name="north_east_door_2" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.2, 0, -1.31134e-07, 0, 2.8, 0, 1.74846e-08, 0, -1.5, 2.7, 2, -4 )

[node name="south_east_door_1" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 1.5, 2.5, 2, 4 )

[node name="south_east_door_2" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.2, 0, -1.31134e-07, 0, 2.8, 0, 1.74846e-08, 0, -1.5, 2.7, 2, 7 )

[node name="south_west_door_1" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 1.5, -2.7, 2, 4 )

[node name="south_west_door_2" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.2, 0, -1.31134e-07, 0, 2.8, 0, 1.74846e-08, 0, -1.5, -2.5, 2, 7 )

[node name="world_volume_corner42" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 4, 2.3, 2, -11 )

[node name="world_volume_corner43" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 8, 2.3, 2, -4 )

[node name="world_volume_corner44" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 2.8, 0, 0, 0, 4, 2.3, 2, 7 )

[node name="world_volume_corner38" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 8, 1.3, 2, -4 )

[node name="world_volume_corner45" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 4, -2.3, 2, -11 )

[node name="world_volume_corner48" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 1, -2.3, 4, -11 )

[node name="world_volume_corner58" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 4, 1.3, 2, -11 )

[node name="world_volume_corner59" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 4, -2.3, 2, 7 )

[node name="world_volume_corner60" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 4, 1.3, 2, 7 )

[node name="world_volume_corner46" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 8, -2.3, 2, -4 )
